--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:name=".activities.PillReminderActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activities.BraceletAT2019Activity"
+            android:name=".activities.BraceletVitalActivity"
             android:screenOrientation="portrait" />
 
         <service
